--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <style type="text/css">
       .bigheader {
         /*margin-bottom: 40px;*/
@@ -219,7 +219,7 @@
     </footer>
 
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function(e){
         // bleh.
