added keepcool app

--- a/index.html
+++ b/index.html
@@ -204,6 +204,21 @@
           </div>
           <div class="span8"><img src="img/publicsenat.jpg" /></div>
         </div>
+        <hr>
+        <div class="row fluid item">
+          <div class="span4">
+            <h3>Keep Cool</h3>
+            <p>
+              Application made for <a href="http://www.keepcool.fr" >Keep Cool</a> fitness centres.
+              Finds the nearest centres from your position, fitness recipes, BMI ( Body Mass Index) computation.
+            </p>
+            <p>
+              Uses a simple XML file with a timestamp to update the local database : centres, team for each centre, recipes.
+            </p>
+            <a href="http://itunes.apple.com/fr/app/keep-cool/id439287539">Download it on iTunes</a>
+          </div>
+          <div class="span8"><img src="img/keepcool.jpg" /></div>
+        </div>
       </div>
     </section>
 
