--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         padding-top: 50px;
         width: 100%;
         text-align: center;
-        /*background-image: url(img/paper_texture_350x350.jpg);
-        color: #FFF;*/
+        background-image: url(img/paper_texture_350x350.jpg);
+        color: #FFF;
       }
 
       .bigheader h1 {
@@ -116,15 +116,15 @@
             <h2>Javascript</h2>
             <p>
               Vanilla, Backbone.js, jQuery, dynamic UI and UI assets.
-              Events, functional and async programming. Server side : very good knowledge of NodeJS.
-              Rest APIs consuming : Facebook, Twitter, ...
+              Events, functional and async programming. third party REST consuming, web scraping.
+              Very good knowledge of NodeJS, ExpressJS, integration with MongoDB, to create web based business / BTB applications. Demos on demand.
             </p>
           </div>
           <div class="span4">
             <h2>Misc</h2>
             <p>
               10 years of experience on Flash / Actionscript, including live streaming using Wowza Media Server : machine setup, installation, deployment, maintenance.
-              Basic knowledge of OpenGL.
+              Basic knowledge of OpenGL : banners, mini sites, full flash sites, for customers including Microsoft / MSN, Havas, Canal Satellite, etc. 
             </p>
           </div>
         </div>
@@ -138,7 +138,9 @@
         <h1>Work</h1>
         <div class="row fluid item">
           <div class="span4">
-            <h3>OA Proto</h3>
+            <div>
+              <h3>OA Proto <small>iOS</small></h3>
+            </div>
             <p>
               OA Proto is an iPad application prototype asked by <a href="http://www.bnf.fr">BNF</a> at <a href="http://www.iseabloom.com">is&a bloom</a> for sharing annotations on medieval manuscripts.
               Built to check usability and interest from researchers working in that field.
@@ -147,28 +149,29 @@
               <li>Implements OpenCV APIs for "magic wand" feature</li>
               <li>Export format : Open Annotation / SVG</li>
             </p>
-            <p>Work in progress. Source code available <a href="https://github.com/ivato/OAProto">here</a></p>
+            <p>Download it <a href="https://itunes.apple.com/fr/app/formes-a-toucher/id667357077?mt=8">here</a></p>
+            <p>Source code available <a href="https://github.com/ivato/OAProto">here</a></p>
           </div>
           <div class="span8"><img src="img/oaproto.jpg"></div>
         </div>
         <hr>
         <div class="row fluid item">
           <div class="span4" >
-            <h3>Baby Painting Box</h3>
+            <h3>Baby Painting Box <small>iOS</small></h3>
             <p>
               When drawing, babies use complex techniques that involves their 10 fingers simultaneously.
               Hence this application that handles a 10 fingers multitouch.
             </p>
             <p>Painting cans can be moved around. 3 strokes, saves to the iphone gallery</p>
             <p>Universal application, retina support.</p>
-            <p>Available soon.</p>
+            <p>Work in progress.</p>
           </div>
           <div class="span8" ><img src="img/babydraw2.jpg" /></div>
         </div>
         <hr>
         <div class="row fluid item">
           <div class="span4">
-            <h3>Photo Trippr</h3>
+            <h3>Photo Trippr <small>iOS</small></h3>
             <p>
               This free app makes you travel inside Flickr, by browsing its content, by keywords or tags. 
             </p>
@@ -182,7 +185,7 @@
         <hr>
         <div class="row fluid item">
           <div class="span4">
-            <h3>Look Hunter</h3>
+            <h3>Look Hunter <small>iOS</small></h3>
             <p>
               This <a href="http://www.moodlook.com/application-iphone">app</a> was made for the fashion social network <a href="http://www.moodlook.com">moodlook</a>, to let users share their looks on the website.
             </p>
@@ -193,7 +196,7 @@
         <hr>
         <div class="row fluid item">
           <div class="span4">
-            <h3>Public Sénat</h3>
+            <h3>Public Sénat <small>iOS</small></h3>
             <p>
               Application made for <a href="http://www.publicsenat.fr" >Public Sénat</a> website.
             </p>
@@ -207,7 +210,7 @@
         <hr>
         <div class="row fluid item">
           <div class="span4">
-            <h3>Keep Cool</h3>
+            <h3>Keep Cool <small>iOS</small></h3>
             <p>
               Application made for <a href="http://www.keepcool.fr" >Keep Cool</a> fitness centres.
               Finds the nearest centres from your position, fitness recipes, BMI ( Body Mass Index) computation.
@@ -219,7 +222,23 @@
           </div>
           <div class="span8"><img src="img/keepcool.jpg" /></div>
         </div>
+        <div class="row fluid item">
+          <div class="span4">
+            <h3>Chacun son rêve <small>Flash</small></h3>
+            <p>
+              Flash web site made for <a href="http://www.bonnecompagnie.fr" >Bonne compagnie</a> and <a href="http://www.canalsat.fr" >Canal Satellite</a>.
+              Allows candidates to subscribe for a TV show using a 3D interface.
+            </p>
+            <p>
+              Uses Away3D engine, Google and Yahoo reverse geolocation.
+            </p>
+            <a href="http://www.chacunsonreve.com">View</a>
+          </div>
+          <div class="span8"><img src="img/chacunsonreve.jpg" ></div>
+        </div>
       </div>
+    </div>
+
     </section>
 
     <hr>
@@ -227,7 +246,7 @@
     <footer class="footer">
       <div class="container">
         <p>
-          <span> mail : ivan dot touzeau at gmail dot com</span>
+          <span> mail : ivan (dot) touzeau (at) gmail (dot) com</span>
           <a class="pull-right" href="https://github.com/ivato">https://github.com/ivato</a>
         </p>
       </div>
