ajout version fr

--- a/index_fr.html
+++ b/index_fr.html
@@ -90,10 +90,10 @@
 
     <section id="home">
 
-      <p class="lang"><a href="index_fr.html">fr</a></p>
+      <p class="lang"><a href="index.html">en</a></p>
       <div class="bigheader">
         <h1>ivato</h1>
-        <p>iOS and javascript developer</p>
+        <p>Dévelopeur iOS et javascript</p>
       </div>
 
       <div class="container subheader">
@@ -101,22 +101,22 @@
           <div class="span4">
             <h2>iOS</h2>
             <p>
-              Good knowledge of Apple Core frameworks, QuartzCore, geoloc, camera APIs; networking, multithreading, memory management, custom interface creation and animation; good understanding of third party frameworks : Box2D, OpenCV, ...
+              Maîtrise des frameworks Apple Core, QuartzCore, APIs image, caméra, géolocalisation; communications réseau, multithreading, gestion de la mémoire; création et animation interfaces custom; bonne connaissance des framesworks tiers : Box2D, OpenCV, ...
             </p>
           </div>
           <div class="span4">
             <h2>Javascript</h2>
             <p>
-              Vanilla JS, Backbone.js, jQuery, dynamic UI and UI assets.
-              Events, functional and async programming. third party APIs consuming, web scraping.
-              Very good knowledge of NodeJS / ExpressJS / MongoDB, used for web based business / BTB applications. Demos on demand.
+              pure JS, Backbone.js, jQuery. Création d'éléments d'interface custom.
+              Programmation asynchrone, événementielle, fonctionnelle. Connection à des services tiers, web scraping.
+              Très bonne maîtrise de l'ensemble NodeJS / ExpressJS / MongoDB, utilisé pour des outils BtB en ligne. Démos sur demande.
             </p>
           </div>
           <div class="span4">
-            <h2>Misc</h2>
+            <h2>Autres</h2>
             <p>
-              More than 10 years of experience on Flash / AS 3.0, 3D engines, live streaming using Wowza Media Server : installation, deployment, maintenance.
-              Banners, mini sites, full flash sites, advanced UIs for Microsoft / MSN, Havas, Canal Satellite, etc.
+              +10 ans d'expérience sur Flash / AS 3.0, moteurs 3D, streaming ( Wowza Media Server : installation, déploiement, maintenance ).
+              Création de bannières, mini sites, sites full flash. Clients : Microsoft / MSN, Havas, Canal Satellite, etc. 
             </p>
           </div>
         </div>
@@ -129,18 +129,18 @@
       <div class="container section">
         <h1>Work</h1>
         <p>
-          After almost 15 years working in the field, it is hard to filter and sort all the projects I've been working on.
-          Below are samples of some of the projects I have been working on lastly. 
-          Feel free to contact me on ivan (dot) touzeau (at) gmail (dot) com
+          Après 15 ans de travail dans le domaine, c'est difficile de trier et de donner un apercu exhaustif de mon travail et de mes compétences.
+          Les extraits ci dessous reflètent une partie de mon travail récent. 
+          Si vous voulez en savoir plus n'hésitez pas à me contacter : ivan (dot) touzeau (at) gmail (dot) com
         </p>
         <div class="row fluid item">
           <div class="span4">
-            <h3>node.js development <small>JS</small></h3>
+            <h3>dévelopement node.js <small>JS</small></h3>
             <p>
-              <strong>Several BTB tools. Demos on demand</strong>
-              <li>Front : mainly JQuery / Backbone.js / bootstrap twitter</li>
+              <strong>Outils BTB. Démos sur demande</strong>
+              <li>Front : JQuery / Backbone.js / bootstrap twitter</li>
               <li>Back : Node.js, mongodb, expressjs</li>
-              <li>REST and CRUD API design / third party API connections / encryption / web scraping, data mining / complex forms development</li>
+              <li>Création d'APIs REST, CRUD / connection services tiers / cryptage / web scraping, data mining / interfaces riches</li>
             </p>
           </div>
           <div class="span8"><img src="img/screenshot-nodejs.jpg"></div>
@@ -152,15 +152,15 @@
               <h3>OA Proto <small>iOS</small></h3>
             </div>
             <p>
-              OA Proto is an iPad application prototype asked by <a href="http://www.bnf.fr">BNF</a> at <a href="http://www.iseabloom.com">is&a bloom</a> for sharing annotations on medieval manuscripts.
-              Built to check usability and interest from researchers working in that field.
-              Exports Open Annotation format.
-              <li>Custom engine for zooming and panning big images</li>
-              <li>Implements OpenCV APIs for "magic wand" feature</li>
-              <li>Export format : Open Annotation / SVG</li>
+              OA Proto est un prototype d'application iPad demandée par la <a href="http://www.bnf.fr">BNF</a> chez <a href="http://www.iseabloom.com">is&a bloom</a> qui permet le partage d'annotations sur des manuscrits anciens.
+              Elle a été commandée afin de lancer un premier draft sur le sujet.
+              Exporte les données au format Open Annotation.
+              <li>Moteur zoom/panning 100% custom ( ouverture d'images >5000px de côté )</li>
+              <li>Implementation d'OpenCV ( baguette magique )</li>
+              <li>format d'export : Open Annotation / SVG</li>
             </p>
-            <p><a href="https://itunes.apple.com/fr/app/formes-a-toucher/id667357077?mt=8">Download it on iTunes</a></p>
-            <p>Source code available <a href="https://github.com/ivato/OAProto">here</a></p>
+            <p><a href="https://itunes.apple.com/fr/app/formes-a-toucher/id667357077?mt=8">Télécharger sur iTunes</a></p>
+            <p>Source code disponible <a href="https://github.com/ivato/OAProto">ici</a></p>
           </div>
           <div class="span8"><img src="img/oaproto.jpg"></div>
         </div>
@@ -169,12 +169,12 @@
           <div class="span4" >
             <h3>Baby Painting Box <small>iOS</small></h3>
             <p>
-              When drawing, babies use complex techniques that involves their 10 fingers simultaneously.
-              Hence this application that handles a 10 fingers multitouch.
+              Quand les bébés dessinent, ils utilisent, contrairement à nous, des techniques complexes de dessin qui mettent en jeu jusqu'à 10 doigts.
+              D'ou le développement de cette application qui gère un vrai multitouch.
             </p>
-            <p>Painting cans can be moved around. 3 strokes, saves to the iphone gallery</p>
-            <p>Universal application, retina support.</p>
-            <p>Work in progress.</p>
+            <p>3 épaisseurs de contours, plusieurs couleurs, enregistrement des chefs d'oeuvre dans la librairie photo</p>
+            <p>application universelle, retina support.</p>
+            <p>Travail en cours.</p>
           </div>
           <div class="span8" ><img src="img/babydraw2.jpg" /></div>
         </div>
@@ -183,12 +183,12 @@
           <div class="span4">
             <h3>Photo Trippr <small>iOS</small></h3>
             <p>
-              This free app makes you travel inside Flickr, by browsing its content, by keywords or tags. 
+              Cette application gratuite permet de se promener dans la bibliothèque Flickr, en navigant par mots clés, tags, contenu.
             </p>
             <p>
-              It was made for <a href="http://www.iseabloom.com">is&a bloom</a> to test a few OpenGL features and perform tests on some 2D animations.
+              Créée en interne chez <a href="http://www.iseabloom.com">is&a bloom</a> pour tester quelques features OpenGL.
             </p>
-            <a href="https://itunes.apple.com/app/id392930669?mt=8&affId=2226912&ign-mpt=uo%3D4">Download it on iTunes</a>
+            <a href="https://itunes.apple.com/app/id392930669?mt=8&affId=2226912&ign-mpt=uo%3D4">Télécharger sur iTunes</a>
           </div>
           <div class="span8"><img src="img/phototrippr.jpg" /></div>
         </div>
@@ -197,9 +197,9 @@
           <div class="span4">
             <h3>Look Hunter <small>iOS</small></h3>
             <p>
-              This <a href="http://www.moodlook.com/application-iphone">app</a> was made for the fashion social network <a href="http://www.moodlook.com">moodlook</a>, to let users share their looks on the website.
+              cette <a href="http://www.moodlook.com/application-iphone">app</a> a été créée pour le réseau social orienté mode <a href="http://www.moodlook.com">moodlook</a>, pour permettre aux utilisateurs d'uploader des photos sur le site.
             </p>
-            <p>Uses REST APIs for authentication and data upload.</p>
+            <p>authentification, upload : connection API REST custom développée en externe sous Synphony2</p>
           </div>
           <div class="span8"><img src="img/lookhunter.jpg" /></div>
         </div>
@@ -208,12 +208,12 @@
           <div class="span4">
             <h3>Public Sénat <small>iOS</small></h3>
             <p>
-              Application made for <a href="http://www.publicsenat.fr" >Public Sénat</a> website.
+              Application basique pour <a href="http://www.publicsenat.fr" >Public Sénat</a>.
             </p>
             <p>
-              Browse most recent articles, most popular ones, search by keywords, social sharing.
+              Permet de parcourir les articles par date, popularité, recherche par mots clés, permet le partage.
             </p>
-            <a href="https://itunes.apple.com/fr/app/public-senat/id384627263?mt=8">Download it on iTunes</a>
+            <a href="https://itunes.apple.com/fr/app/public-senat/id384627263?mt=8">Télécharger sur iTunes</a>
           </div>
           <div class="span8"><img src="img/publicsenat.jpg" /></div>
         </div>
@@ -222,13 +222,13 @@
           <div class="span4">
             <h3>Keep Cool <small>iOS</small></h3>
             <p>
-              Application made for <a href="http://www.keepcool.fr" >Keep Cool</a> fitness centres.
-              Finds the nearest centres from your position, fitness recipes, BMI ( Body Mass Index) computation.
+              Application créée pour la chaine de fitness <a href="http://www.keepcool.fr" >Keep Cool</a> .
+              Permet de trouver le centre le plus proche ( geoloc ), chargement de recettes adaptées, permet le calcul de l'IMC ( Indice de Masse Corporelle )
             </p>
             <p>
-              Uses a simple XML file with a timestamp to update the local database : centres, team for each centre, recipes.
+              Utilise un simple fichier XML distant avec un timestamp qui permet la mise à jour des données.
             </p>
-            <a href="http://itunes.apple.com/fr/app/keep-cool/id439287539">Download it on iTunes</a>
+            <a href="http://itunes.apple.com/fr/app/keep-cool/id439287539">Télécharger sur iTunes</a>
           </div>
           <div class="span8"><img src="img/keepcool.jpg" /></div>
         </div>
@@ -237,29 +237,30 @@
           <div class="span4">
             <h3>Chacun son rêve <small>Flash</small></h3>
             <p>
-              Flash web site made for <a href="http://www.bonnecompagnie.fr" >Bonne compagnie</a> and <a href="http://www.canalsat.fr" >Canal Satellite</a>.
-              Allows candidates to subscribe for a TV show using a 3D interface.
+              site full Flash pour <a href="http://www.bonnecompagnie.fr" >Bonne compagnie</a> et <a href="http://www.canalsat.fr" >Canal Satellite</a>.
+              Permet aux candidats d'une émission voyage de s'inscrire via une interface 3D.
             </p>
             <p>
-              Uses Away3D engine, Google and Yahoo reverse geolocation.
+              Utilise le moteur Away3D, plus les APIs Google et Yahoo pour la geolocalisation inverse.
             </p>
-            <a href="http://www.chacunsonreve.com">View</a>
+            <a href="http://www.chacunsonreve.com">Voir</a>
           </div>
           <div class="span8"><img src="img/chacunsonreve.jpg" ></div>
         </div>
         <hr>
         <div class="row fluid item">
           <div class="span4">
-            <h3>Webcam Video recording application <small>Flash</small></h3>
+            <h3>Applications d'enregistrement Webcam <small>Flash</small></h3>
             <p>
-              Flash plugin MSN Messenger app made for <a href="http://news.fr.msn.com/" >MSN News</a>. and for Public Senat.
-              Used to allow msn users / PS visitors to ask questions using their webcam.
+              A l'origine un plugin Flash pour feu MSN Messenger, créé pour  <a href="http://news.fr.msn.com/" >MSN News</a>. and for Public Senat.
+              Permet aux utilisateurs de pose une question sous format vidéo.
+              Remanié from scratch pour utilisation chez Public Sénat.
             </p>
             <p>
-              The app consisted in a flash web client, a flash user interface used for administration and moderation, and a wowza media server setup on a dedicated server. 
+              L'applicatif consiste en un client web en flash, une interface flash pour l'administration et la modération, plus un serveur "Wowza Media Server" installé sur un dédié. 
             </p>
             <p>
-              Uses Wowza Media Server for the video recording and broadcasting. ffmpeg was used for the video format conversion.
+              Utilise Wowza Media Server pour l'enregistrement et la diffusion des vidéos, et ffmpeg pour la conversion des vidéos.
             </p>
           </div>
           <div class="span8">
