corrections textes fr

--- a/index_fr.html
+++ b/index_fr.html
@@ -127,7 +127,7 @@
 
     <section id="work">
       <div class="container section">
-        <h1>Work</h1>
+        <h1>Travaux</h1>
         <p>
           Après 15 ans de travail dans le domaine, c'est difficile de trier et de donner un apercu exhaustif de mon travail et de mes compétences.
           Les extraits ci dessous reflètent une partie de mon travail récent. 
