--- a/index.html
+++ b/index.html
@@ -102,21 +102,22 @@
             <h2>iOS</h2>
             <p>
               Good knowledge of Apple Core frameworks, QuartzCore, geoloc, camera APIs; networking, multithreading, memory management, custom interface creation and animation; good understanding of third party frameworks : Box2D, OpenCV, ...
+              Always keeping and eye on CPU + memory optimization to give users the best experience possible.
             </p>
           </div>
           <div class="span4">
             <h2>Javascript</h2>
             <p>
               Vanilla JS, Backbone.js, jQuery, dynamic UI and UI assets.
-              Events, functional and async programming. third party APIs consuming, web scraping.
+              Events, functional and async programming. third party APIs consuming, web scraping, real-time communications.
               Very good knowledge of NodeJS / ExpressJS / MongoDB, used for web based business / BTB applications. Demos on demand.
             </p>
           </div>
           <div class="span4">
             <h2>Misc</h2>
             <p>
-              More than 10 years of experience on Flash / AS 3.0, 3D engines, live streaming using Wowza Media Server : installation, deployment, maintenance.
-              Banners, mini sites, full flash sites, advanced UIs for Microsoft / MSN, Havas, Canal Satellite, etc.
+              More than 10 years of experience on Flash / AS 3.0, 3D engines, real-time communication, live streaming using Wowza Media Server : installation, deployment, maintenance.
+              Banners, mini sites, full flash sites, advanced UIs for internal works and advertisers at Microsoft / MSN, Havas, Canal Satellite, etc.
             </p>
           </div>
         </div>
@@ -129,9 +130,9 @@
       <div class="container section">
         <h1>Work</h1>
         <p>
-          After almost 15 years working in the field, it is hard to filter and sort all the projects I've been working on.
+          After almost 15 years working in the field, it is hard to sort all the projects I've been working on.
           Below are samples of some of the projects I have been working on lastly. 
-          Feel free to contact me on ivan (dot) touzeau (at) gmail (dot) com
+          For more information, feel free to contact me on ivan (dot) touzeau (at) gmail (dot) com
         </p>
         <div class="row fluid item">
           <div class="span4">
