--- a/index_fr.html
+++ b/index_fr.html
@@ -102,21 +102,22 @@
             <h2>iOS</h2>
             <p>
               Maîtrise des frameworks Apple Core, QuartzCore, APIs image, caméra, géolocalisation; communications réseau, multithreading, gestion de la mémoire; création et animation interfaces custom; bonne connaissance des framesworks tiers : Box2D, OpenCV, ...
+              Souci constant d'optimisation CPU et mémoire, pour offrir la meilleure expérience possible à l'utilisateur.
             </p>
           </div>
           <div class="span4">
             <h2>Javascript</h2>
             <p>
-              pure JS, Backbone.js, jQuery. Création d'éléments d'interface custom.
-              Programmation asynchrone, événementielle, fonctionnelle. Connection à des services tiers, web scraping.
+              Backbone.js, jQuery. Création d'éléments d'interface custom.
+              Programmation asynchrone, événementielle, fonctionnelle. Connection à des services tiers, web scraping, applications temps réel.
               Très bonne maîtrise de l'ensemble NodeJS / ExpressJS / MongoDB, utilisé pour des outils BtB en ligne. Démos sur demande.
             </p>
           </div>
           <div class="span4">
             <h2>Autres</h2>
             <p>
-              +10 ans d'expérience sur Flash / AS 3.0, moteurs 3D, streaming ( Wowza Media Server : installation, déploiement, maintenance ).
-              Création de bannières, mini sites, sites full flash. Clients : Microsoft / MSN, Havas, Canal Satellite, etc. 
+              +10 ans d'expérience sur Flash / AS 3.0, moteurs 3D, chargement de données externes, applications temps réel, streaming ( Wowza Media Server : installation, déploiement, maintenance ).
+              Création de bannières, mini sites, sites full flash. Clients : autopromo et annonceurs chez Microsoft / MSN, Havas, Canal Satellite, etc. 
             </p>
           </div>
         </div>
@@ -129,9 +130,9 @@
       <div class="container section">
         <h1>Travaux</h1>
         <p>
-          Après 15 ans de travail dans le domaine, c'est difficile de trier et de donner un apercu exhaustif de mon travail et de mes compétences.
-          Les extraits ci dessous reflètent une partie de mon travail récent. 
-          Si vous voulez en savoir plus n'hésitez pas à me contacter : ivan (dot) touzeau (at) gmail (dot) com
+          Après 15 ans de travail, difficile de trier et de donner un apercu exhaustif de mon travail et de mes compétences.
+          Les extraits ci-dessous reflètent une partie de mon travail récent.
+          Si vous voulez en savoir, plus n'hésitez pas à me contacter : ivan (dot) touzeau (at) gmail (dot) com
         </p>
         <div class="row fluid item">
           <div class="span4">
