update cv - commentaires en header

--- a/cv.html
+++ b/cv.html
@@ -96,6 +96,26 @@
     <section>
       <div class="container section">
         <div class="row fluid item">
+          <div class="span12" >
+            <p>
+              <h5>Langages : </h5>
+              Javascript, ActionScript, Objective-C. Quelques notions en C, C++, et en Python.
+            </p>
+            <div>
+              <dl>
+                <dt>Serveur :</dt><dd>ExpressJS, SocketIO, PeerJS, Jasmine, ZombieJS, XLRD, XLWT. APIs externes : Google, Yahoo, ImageMagick, OpenCV, OSM, APIs spécifiques,…</dd>
+                <dt>Front :</dt><dd>Twitter Bootstrap, JQuery, Backbone, RiotJS, Vanilla JS.</dd>
+                <dt>Bases de données :</dt><dd>Excellente maitrise de MongoDB, Redis. Quelques connaissances sur MySQL, MSSQL.</dd>
+                <dt>IDEs et outils de travail :</dt><dd>OSX, Debian, Sublime Text, Git, Virtual Box, XCode, Jenkins.</dd>
+              </dl>
+              <p>Beaucoup d'outils sont développés en interne car le solutions existantes ne sont pas satisfaisantes pour moi, notamment tout ce qui touche aux sessions, et aux droits utilisateurs.</p>
+              <p>J'ai un très haut niveau d'implication : optimisation, performances, et je prends toujours soin de la lisibilité et de la maintenabilité du code.<br>
+              A part ça : je suis un homme, j'ai 42 ans…, marié, j'ai une fille. J'aime la lecture, la photo, la cuisine, les voyages, et mon métier !
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row fluid item">
           <div class="span2 section-range-years">
             <h3>2011-2016</h3>
           </div>
