--- a/cv.html
+++ b/cv.html
@@ -94,23 +94,23 @@
   <body data-spy="scroll" data-target=".navbar" >
 
     <section>
+      <p class="lang"><a href="cv_fr.html">fr</a></p>
       <div class="container section">
         <div class="row fluid item">
           <div class="span12" >
             <p>
               <h5>Langages : </h5>
-              Javascript, ActionScript, Objective-C. Quelques notions en C, C++, et en Python.
+              Javascript, ActionScript, Objective-C. Basics in C, C++, Python.
             </p>
             <div>
               <dl>
-                <dt>Serveur :</dt><dd>ExpressJS, SocketIO, PeerJS, Jasmine, ZombieJS, XLRD, XLWT. APIs externes : Google, Yahoo, ImageMagick, OpenCV, OSM, APIs spécifiques,…</dd>
+                <dt>Server :</dt><dd>ExpressJS, SocketIO, PeerJS, Jasmine, ZombieJS, XLRD, XLWT. APIs : Google, Yahoo, ImageMagick, OpenCV, OSM, …</dd>
                 <dt>Front :</dt><dd>Twitter Bootstrap, JQuery, Backbone, RiotJS, Vanilla JS.</dd>
-                <dt>Bases de données :</dt><dd>Excellente maitrise de MongoDB, Redis. Quelques connaissances sur MySQL, MSSQL.</dd>
-                <dt>IDEs et outils de travail :</dt><dd>OSX, Debian, Sublime Text, Git, Virtual Box, XCode, Jenkins.</dd>
+                <dt>Databases :</dt><dd>Very good knowledge on MongoDB, Redis. Basics on MySQL, MSSQL.</dd>
+                <dt>IDEs and tools :</dt><dd>OSX, Debian, Sublime Text, Git, Virtual Box, XCode, Jenkins.</dd>
               </dl>
-              <p>Beaucoup d'outils sont développés en interne car le solutions existantes ne sont pas satisfaisantes pour moi, notamment tout ce qui touche aux sessions, et aux droits utilisateurs.</p>
-              <p>J'ai un très haut niveau d'implication : optimisation, performances, et je prends toujours soin de la lisibilité et de la maintenabilité du code.<br>
-              A part ça : je suis un homme, j'ai 42 ans…, marié, j'ai une fille. J'aime la lecture, la photo, la cuisine, les voyages, et mon métier !
+              <p>Some tools and APis are written from scratch on session and user rights management.</p>
+              <p>High level of implication : optimisation, performances, <br>
               </p>
             </div>
           </div>
@@ -120,62 +120,61 @@
             <h3>2011-2016</h3>
           </div>
           <div class="span8">
-            <h4>Développement / conception d'applications SAAS :</h4>
-            <h5>Outil de travail pour la société ISIS Aquitaine - leader sur son secteur, la pose de matériel médical à domicile</h5>
+            <h4>Dévelopment / SAAS engineering :</h4>
+            <h5>Main app for ISIS Aquitaine company</h5>
             <p>
-            Les plus :
+            Pros of the application :
               <ul>
-                  <li>Planification/optimisation de tournées techniciens, interfacage avec google calendars</li>
-                  <li>Accès médecins avec vues patientèle, messages</li>
-                  <li>Accès temps réel au prévisionnel</li>
-                  <li>Formulaire élaboré pour la saisie des interventions</li>
-                  <li>Génération de PDFs à la volée</li>
+                  <li>Planification/optimisation of deliveries</li>
+                  <li>Agendas feeded from and to Google Calendars</li>
+                  <li>Entry for doctors</li>
+                  <li>Real time metrics on forecasts and plannings</li>
+                  <li>Enhanced form for intervention editing</li>
+                  <li>on-demand PDF generation</li>
               </ul>
             </p>
             <p>
-            Les gains pour la société :
               <ul>
-                <li>2 personnes gagnées sur une équipe de 8 à l'administratif</li>
-                <li>Augmentation du rendement des techniciens de 20%, a permis d'augmenter l'équipe</li>
-                <li>Limitation des pertes avec identification des patients non facturés</li>
+                <li>2 people saved on a 8 people team on administrative tasks</li>
+                <li>+20% capacity on deliveries</li>
+                <li>Elimination of losses</li>
               </ul>
-              <i>Repo Github privé, accès sur demande.</i>
+              <i>Private Github - access on demand.</i>
             </p>
             <hr>
-            <h5>Outil de consolidation de données et d'aide au pricing, pour Erol, vente de pneus en ligne</h5>
+            <h5>Data consolidation and pricing tool, Erol, an online tires saling company</h5>
             <p>
-            Les plus :
+            Pros of the application :
               <ul>
-                <li>Consolidation quotidienne d'une dizaine de fichiers excel, de diverses sources : FTPs, uploads manuels, mails, pour un poids total de 150 mégas, contenant 80000 références</li>
-                <li>Mailing envoyé aux clients avec les suivis des livraisons</li>
-                <li>Interfacé avec l'API du call-center SAV</li>
+                <li>Daily automated consolidation of 12 excel files, coming from FTPs, uploads, mails, ( about 150 Mb), including more than 80000 references</li>
+                <li>Delivery tracking</li>
+                <li>Connected with external customer service APIs</li>
               </ul>
             </p>
             <p>
-            Les gains pour la société :
               <ul>
-                <li>Le pricing, tâche qui prenait 6 heures/jour à une personne a été réduit à 15 minutes, ce qui a permis de renouveller ce pricing 3x par jour</li>
-                <li>Recherche instantanée de prix par article et date</li>
-                <li>Identification de certains problèmes au SAV, augmentation de la qualité de service du SAV</li>
-                <li>Notifications temps réel sur l'activité téléphone SAV</li>
+                <li>The pricing task needed 6 hours/day for one person, now needs 15 minutes, and is now launched 3 times a day</li>
+                <li>Instant search on price/reference/date</li>
+                <li>Increased the quality of customer service</li>
+                <li>Real time metrics on customer service activity</li>
               </ul>
-              <i>Repo hors github, sources sur demande.</i>
+              <i>Sources on demand</i>
             </p>
             <hr>
-            <h5>Outil de prise de RDV pour un cabinet de courtier immobilier ( WIP )</h5>
-            <p>Les plus :
+            <h5>Backoffice for a property broker ( WIP )</h5>
+            <p>Pros of the application :
               <ul>
-                <li>Synchro Google Calendars pour la prise de RDV</li>
-                <li>Aide à l'analyse des campagnes Google AdWords</li>
-                <li>Automatisation de l'export des données "formulaires web" vers le logiciel "Cifacil" une fois le formulaire validé</li>
+                <li>Google Calendars synchronisation</li>
+                <li>Assistance onGoogle AdWords campaigns analysis</li>
+                <li>Automation on data exports, from web forms to specific vendor application</li>
               </ul>
             </p>
-            <p>Les gains pour la société :
+            <p>
               <ul>
-                <li>Diminution des saisies, et meilleure visibilité de la file active</li>
-                <li>Possibilité d'externaliser une partie du travail à des sous-traitants</li>
+                <li>Limitation of manual inputs, better view on active list</li>
+                <li>Ability to externalise parts of the workflow to vendors</li>
               </ul>
-              <i>Repo Github privé, accès sur demande. Travail en cours.</i>
+              <i>Private Github - access on demand.</i>
             </p>
           </div>
         </div>
@@ -184,17 +183,17 @@
             <h3>2008-2010</h3>
           </div>
           <div class="span8">
-            <h4>Développement / conception d'applications en Objective-C</h4>
-            <h5>Application OpenAnnotation pour le projet Gallica / BNF</h5>
+            <h4>Development and conception of Objective-C applications</h4>
+            <h5>OpenAnnotation Application for Gallica project / Bibliotheque Nationale de France</h5>
             <p>
-            Les plus :
+            Pros of the application :
               <ul>
-                <li>Lecture optimisée de scan haute def, +7000 pixels de côté sur iOS 6.0, avec scroll et mini map de navigation</li>
-                <li>Intégration OpenCV</li>
+                <li>Hi def scans display : +7000 pixels image sizes on iOS 6.0, including scroll and mini map</li>
+                <li>OpenCV Integration for manual selection of portions, using a magic wand tool</li>
               </ul>
-              <a href="https://github.com/ivato/OAProto" >Repo Github</a>
+              <a href="https://github.com/ivato/OAProto" >Github sources</a>
             </p>
-            <p>Beaucoup d'autres applications développées mais dont l'intérêt est limité. Voir <a href="http://ivato.github.io/">mon ancien CV</a> pour plus d'infos.</p>
+            <p>Many other applications. Check <a href="http://ivato.github.io">my previous CV</a> for more infos.</p>
           </div>
         </div>
         <div class="row fluid item">
@@ -202,9 +201,9 @@
             <h3>2003-2007</h3>
           </div>
           <div class="span8">
-            <h4>Conception multimedia chez Microsoft Advertising ( MSN France )</h4>
+            <h4>Multimedia dev. at Microsoft Advertising ( MSN France )</h4>
             <p>
-              Création de nombreux concepts pub en avant vente pour de grandes enseignes : Chanel, Dior, Lancôme, Coca Cola, Opel, Renault…
+              Numerous advertising pre-sales concepts for big companies : Chanel, Dior, Lancôme, Coca Cola, Opel, Renault…
             </p>
           </div>
         </div>
@@ -213,8 +212,8 @@
             <h3>1997-2002</h3>
           </div>
           <div class="span8">
-            <h4>Design graphique, maquettes pour sites webs</h4>
-            <p>Création maquettes et mises en page à l'époque du web 1.0.</p>
+            <h4>Graphic design and layouts</h4>
+            <p>Graphic creation, layouts, for web 1.0.</p>
           </div>
         </div>
       </div>
