--- a/cv.html
+++ b/cv.html
@@ -99,18 +99,18 @@
         <div class="row fluid item">
           <div class="span12" >
             <p>
-              <h5>Langages : </h5>
+              <h5>Languages : </h5>
               Javascript, ActionScript, Objective-C. Basics in C, C++, Python.
             </p>
             <div>
               <dl>
                 <dt>Server :</dt><dd>ExpressJS, SocketIO, PeerJS, Jasmine, ZombieJS, XLRD, XLWT. APIs : Google, Yahoo, ImageMagick, OpenCV, OSM, …</dd>
-                <dt>Front :</dt><dd>Twitter Bootstrap, JQuery, Backbone, RiotJS, Vanilla JS.</dd>
-                <dt>Databases :</dt><dd>Very good knowledge on MongoDB, Redis. Basics on MySQL, MSSQL.</dd>
+                <dt>Front :</dt><dd>Twitter Bootstrap, Google MDL, JQuery, Backbone, RiotJS, Vanilla JS, FullCalendar, HighCharts, …</dd>
+                <dt>Databases :</dt><dd>Very good knowledge on MongoDB, Redis. Basic knowledge on MySQL, MSSQL.</dd>
                 <dt>IDEs and tools :</dt><dd>OSX, Debian, Sublime Text, Git, Virtual Box, XCode, Jenkins.</dd>
               </dl>
               <p>Some tools and APis are written from scratch on session and user rights management.</p>
-              <p>High level of implication : optimisation, performances, <br>
+              <p>High level of implication on the performances, and optimisation of the code for the best performances, using the non-blocking features of NodeJS : streamed results from DB, files, etc.<br>
               </p>
             </div>
           </div>
@@ -121,23 +121,28 @@
           </div>
           <div class="span8">
             <h4>Dévelopment / SAAS engineering :</h4>
-            <h5>Main app for ISIS Aquitaine company</h5>
+            <h5>Main app for ISIS company</h5>
+            <p>
+              These SaaS are compliant with French e-health standards : privacy, hosting, authentication.<br>
+              This application was running on one agency, but it is currently modified to be deployed over +120 agencies.<br>
+              Please contact me for more information.
+            </p>
             <p>
             Pros of the application :
               <ul>
                   <li>Planification/optimisation of deliveries</li>
                   <li>Agendas feeded from and to Google Calendars</li>
-                  <li>Entry for doctors</li>
+                  <li>Private access for doctors</li>
                   <li>Real time metrics on forecasts and plannings</li>
-                  <li>Enhanced form for intervention editing</li>
+                  <li>Enhanced forms for intervention editing</li>
                   <li>on-demand PDF generation</li>
               </ul>
             </p>
             <p>
               <ul>
                 <li>2 people saved on a 8 people team on administrative tasks</li>
-                <li>+20% capacity on deliveries</li>
-                <li>Elimination of losses</li>
+                <li>+20% capacity on deliveries, appointments are no more lost</li>
+                <li>Real time metrics on revenues, including forecasts</li>
               </ul>
               <i>Private Github - access on demand.</i>
             </p>
@@ -146,9 +151,9 @@
             <p>
             Pros of the application :
               <ul>
-                <li>Daily automated consolidation of 12 excel files, coming from FTPs, uploads, mails, ( about 150 Mb), including more than 80000 references</li>
+                <li>Daily automated consolidation of many excel files, coming from FTPs, uploads, mails, ( total size about 150 Mb), including more than 80000 references</li>
                 <li>Delivery tracking</li>
-                <li>Connected with external customer service APIs</li>
+                <li>Connected with external customer service APIs : phone services, deliveries.</li>
               </ul>
             </p>
             <p>
