--- a/cv.html
+++ b/cv.html
@@ -120,7 +120,7 @@
             <h3>2011-2016</h3>
           </div>
           <div class="span8">
-            <h4>Dévelopment / SAAS engineering :</h4>
+            <h4>Development / SAAS engineering :</h4>
             <h5>Main app for ISIS company</h5>
             <p>
               These SaaS are compliant with French e-health standards : privacy, hosting, authentication.<br>
